# magnesia

./: .clang-format  .clang-tidy  .cmake-format.yaml  .codespellrc  .editorconfig  .gitignore  .gitlab-ci.yml  CMakeLists.txt  CONTRIBUTING.md  README.md  flake.nix
.ci/: build.sh  install_deps.sh  lint.sh  setup.sh  setup_nix.sh
cmake/: CompilerWarnings.cmake  PreventInSourceBuilds.cmake  Sanitizers.cmake
configured_files/: CMakeLists.txt  version.hpp.in
docs/: about.rst  activities.rst  attributeview.rst  conf.py  dataviewer.rst  index.rst  logview.rst  nodeview.rst  referenceview.rst  settings.rst  treeview.rst  usage.rst
nix/: magnesia.nix  open62541.nix  open62541pp.nix
src/magnesia/: Activity.cpp  Activity.hpp  ActivityMetadata.cpp  ActivityMetadata.hpp  Application.cpp  Application.hpp  CMakeLists.txt  ConfigWidget.cpp  ConfigWidget.hpp  HistoricServerConnection.cpp  HistoricServerConnection.hpp  Layout.cpp  Layout.hpp  Router.cpp  Router.hpp  SQLStorageManager.cpp  SQLStorageManager.hpp  SettingsManager.cpp  SettingsManager.hpp  StorageManager.cpp  StorageManager.hpp  database_types.cpp  database_types.hpp  main.cpp  qt_version_check.hpp  settings.cpp  settings.hpp  terminate.cpp  terminate.hpp  utils.cpp  utils.hpp
src/magnesia/activities/: activities.cpp  activities.hpp
src/magnesia/activities/about/: About.cpp  About.hpp
src/magnesia/activities/add_activity/: AddActivity.cpp  AddActivity.hpp
src/magnesia/activities/certificate/: Certificate.cpp  Certificate.hpp  CertificateURLHandler.cpp  CertificateURLHandler.hpp
src/magnesia/activities/dataviewer/: ConfigWidget.cpp  ConfigWidget.hpp  DataViewer.cpp  DataViewer.hpp  Panel.cpp  Panel.hpp  PanelMetadata.cpp  PanelMetadata.hpp  dataviewer_fwd.cpp  dataviewer_fwd.hpp  layout.cpp  layout.hpp  metadata.cpp  metadata.hpp  panels.cpp  panels.hpp
src/magnesia/activities/dataviewer/panels/: AttributeViewModel.cpp  AttributeViewModel.hpp  AttributeViewPanel.cpp  AttributeViewPanel.hpp  LogViewModel.cpp  LogViewModel.hpp  LogViewPanel.cpp  LogViewPanel.hpp  Node.cpp  Node.hpp  NodeViewModel.cpp  NodeViewModel.hpp  NodeViewPanel.cpp  NodeViewPanel.hpp  ReferenceViewModel.cpp  ReferenceViewModel.hpp  ReferenceViewPanel.cpp  ReferenceViewPanel.hpp  TreeViewModel.cpp  TreeViewModel.hpp  TreeViewPanel.cpp  TreeViewPanel.hpp
src/magnesia/activities/settings/: Settings.cpp  Settings.hpp  SettingsUrlHandler.cpp  SettingsUrlHandler.hpp
src/magnesia/activities/settings_activity/: SettingsActivity.cpp  SettingsActivity.hpp
src/magnesia/opcua_qt/: ApplicationCertificate.cpp  ApplicationCertificate.hpp  Connection.cpp  Connection.hpp  ConnectionBuilder.cpp  ConnectionBuilder.hpp  ConnectionManager.cpp  ConnectionManager.hpp  LogEntry.cpp  LogEntry.hpp  Logger.cpp  Logger.hpp
src/magnesia/opcua_qt/abstraction/: AccessLevel.cpp  AccessLevel.hpp  AccessLevelBitmask.cpp  AccessLevelBitmask.hpp  AttributeId.cpp  AttributeId.hpp  DataValue.cpp  DataValue.hpp  Endpoint.cpp  Endpoint.hpp  EventNotifier.cpp  EventNotifier.hpp  EventNotifierBitmask.cpp  EventNotifierBitmask.hpp  LocalizedText.cpp  LocalizedText.hpp  LogCategory.cpp  LogCategory.hpp  LogLevel.cpp  LogLevel.hpp  MessageSecurityMode.cpp  MessageSecurityMode.hpp  MonitoredItem.cpp  MonitoredItem.hpp  MonitoringMode.cpp  MonitoringMode.hpp  MonitoringParameters.cpp  MonitoringParameters.hpp  NodeClass.cpp  NodeClass.hpp  NodeId.cpp  NodeId.hpp  QualifiedName.cpp  QualifiedName.hpp  ReferenceDescription.cpp  ReferenceDescription.hpp  StatusCode.cpp  StatusCode.hpp  Subscription.cpp  Subscription.hpp  (+10 more)
src/magnesia/opcua_qt/abstraction/node/: DataTypeNode.cpp  DataTypeNode.hpp  MethodNode.cpp  MethodNode.hpp  Node.cpp  Node.hpp  ObjectNode.cpp  ObjectNode.hpp  ObjectTypeNode.cpp  ObjectTypeNode.hpp  ReferenceTypeNode.cpp  ReferenceTypeNode.hpp  VariableNode.cpp  VariableNode.hpp  VariableTypeNode.cpp  VariableTypeNode.hpp  ViewNode.cpp  ViewNode.hpp
src/magnesia/url_handlers/: SettingsUrlHandler.cpp  SettingsUrlHandler.hpp
test/: CMakeLists.txt  example.cpp  storage.cpp
